--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div class="container">
+            <p id="demo">knlj</p>
             <div class="dooz">
                 <button class="a" id="a" onclick="dooz(this.id)"></button>
                 <button class="b" id="b" onclick="dooz(this.id)"></button>
