--- a/index.html
+++ b/index.html
@@ -9,18 +9,59 @@
     <body>
         <div class="container">
             <p id="demo"></p>
-            <div class="dooz" id="dooz">
-                <button class="a btn" id="a" onclick="dooz(this.id),patternn()"></button>
-                <button class="b btn" id="b" onclick="dooz(this.id),patternn()"></button>
-                <button class="c btn" id="c" onclick="dooz(this.id),patternn()"></button>
-                <button class="d btn" id="d" onclick="dooz(this.id),patternn()"></button>
-                <button class="e btn" id="e" onclick="dooz(this.id),patternn()"></button>
-                <button class="f btn" id="f" onclick="dooz(this.id),patternn()"></button>
-                <button class="g btn" id="g" onclick="dooz(this.id),patternn()"></button>
-                <button class="h btn" id="h" onclick="dooz(this.id),patternn()"></button>
-                <button class="i btn" id="i" onclick="dooz(this.id),patternn()"></button>
+            <div class="cdooz">
+                <div class="dooz" id="dooz">
+                    <button
+                        class="a btn"
+                        id="a"
+                        onclick="dooz(this.id),patternn()"
+                    ></button>
+                    <button
+                        class="b btn"
+                        id="b"
+                        onclick="dooz(this.id),patternn()"
+                    ></button>
+                    <button
+                        class="c btn"
+                        id="c"
+                        onclick="dooz(this.id),patternn()"
+                    ></button>
+                    <button
+                        class="d btn"
+                        id="d"
+                        onclick="dooz(this.id),patternn()"
+                    ></button>
+                    <button
+                        class="e btn"
+                        id="e"
+                        onclick="dooz(this.id),patternn()"
+                    ></button>
+                    <button
+                        class="f btn"
+                        id="f"
+                        onclick="dooz(this.id),patternn()"
+                    ></button>
+                    <button
+                        class="g btn"
+                        id="g"
+                        onclick="dooz(this.id),patternn()"
+                    ></button>
+                    <button
+                        class="h btn"
+                        id="h"
+                        onclick="dooz(this.id),patternn()"
+                    ></button>
+                    <button
+                        class="i btn"
+                        id="i"
+                        onclick="dooz(this.id),patternn()"
+                    ></button>
+                </div>
+               <div id="again" class="agine" onclick="again()"> <button>try again</button></div>
             </div>
-            <button id="refresh" onclick="relode()" style="display: none;">refresh</button>
+            <button id="refresh" onclick="relode()" style="display: none">
+                refresh
+            </button>
         </div>
         <script src="mine.js"></script>
     </body>
