--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <div class="container">
             <p id="demo"></p>
             <div class="cdooz">
+                <div class="befor">
+                    <p>Play with your mind!</p>
+                </div>
                 <div class="dooz" id="dooz">
                     <button
                         class="a btn"
@@ -57,7 +60,9 @@
                         onclick="dooz(this.id),patternn()"
                     ></button>
                 </div>
-               <div id="again" class="agine" onclick="again()"> <button>try again</button></div>
+                <div id="again" class="agine" onclick="again()">
+                    <button>try again</button>
+                </div>
             </div>
             <button id="refresh" onclick="relode()" style="display: none">
                 refresh
