--- a/index.html
+++ b/index.html
@@ -17,47 +17,47 @@
                     <button
                         class="a btn"
                         id="a"
-                        onclick="dooz(this.id),patternn()"
+                        onclick="dooz(this.id),patternn(),eqale()"
                     ></button>
                     <button
                         class="b btn"
                         id="b"
-                        onclick="dooz(this.id),patternn()"
+                        onclick="dooz(this.id),patternn(),eqale()"
                     ></button>
                     <button
                         class="c btn"
                         id="c"
-                        onclick="dooz(this.id),patternn()"
+                        onclick="dooz(this.id),patternn(),eqale()"
                     ></button>
                     <button
                         class="d btn"
                         id="d"
-                        onclick="dooz(this.id),patternn()"
+                        onclick="dooz(this.id),patternn(),eqale()"
                     ></button>
                     <button
                         class="e btn"
                         id="e"
-                        onclick="dooz(this.id),patternn()"
+                        onclick="dooz(this.id),patternn(),eqale()"
                     ></button>
                     <button
                         class="f btn"
                         id="f"
-                        onclick="dooz(this.id),patternn()"
+                        onclick="dooz(this.id),patternn(),eqale()"
                     ></button>
                     <button
                         class="g btn"
                         id="g"
-                        onclick="dooz(this.id),patternn()"
+                        onclick="dooz(this.id),patternn(),eqale()"
                     ></button>
                     <button
                         class="h btn"
                         id="h"
-                        onclick="dooz(this.id),patternn()"
+                        onclick="dooz(this.id),patternn(),eqale()"
                     ></button>
                     <button
                         class="i btn"
                         id="i"
-                        onclick="dooz(this.id),patternn()"
+                        onclick="dooz(this.id),patternn(),eqale()"
                     ></button>
                 </div>
                 <div id="again" class="agine" onclick="again()">
