--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                         onclick="dooz(this.id)"
                     ></button>
                 </div>
-                <div id="again" class="agine" onclick="again()">
-                    <button>try again</button>
+                <div id="again" class="clear" onclick="again()">
+                    <button>clear</button>
                 </div>
             </div>
-            <button id="refresh" onclick="relode()" style="display: none">
-                refresh
+            <button class="again" id="refresh" onclick="relode()" style="display: none">
+                try again
             </button>
         </div>
         <script src="mine.js"></script>
