--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="container">
             <p id="demo"></p>
             <div class="cdooz">
-                <div class="befor">
+                <div class="beforbuuton">
                     <p>Play with your mind!</p>
                 </div>
                 <div class="dooz" id="dooz">
@@ -64,7 +64,12 @@
                     <button>clear</button>
                 </div>
             </div>
-            <button class="again" id="refresh" onclick="relode()" style="display: none">
+            <button
+                class="again"
+                id="refresh"
+                onclick="relode()"
+                style="display: none"
+            >
                 try again
             </button>
         </div>
